<resources>
    <string name="app_name">Bank Sampah Desih</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="tabungan">Tabungan</string>
    <string name="info_sampah">Info Sampah</string>
    <string name="list_sampah">List Sampah</string>
    <string name="peringkat">Peringkat</string>
    <string name="profil">Profil</string>
    <string name="laporan">Laporan</string>
    <string name="profile">Profile</string>
    <string name="hallo">Hallo,</string>
    <string name="nasabah">Nasabah!</string>
    <string name="tampilan_tabungan_1">Ayo kumpulkan sampahmu dan tukar dengan sejumlah uang hanya di Aplikasi Desih !</string>
    <string name="total_uang">Total Uang</string>
    <string name="rp">Rp.</string>
    <string name="_75_000">75.000</string>
    <string name="details"><u>Details</u></string>
    <string name="kg">Kg</string>
    <string name="_21">21</string>
    <string name="berat_sampah">Berat Sampah</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="laporan_tabungan">Laporan Tabungan</string>
    <string name="minggu_1">MINGGU 1</string>
    <string name="_11_kg">Berat : 11 Kg</string>
    <string name="total">Total</string>
    <string name="_16_kg">Berat : 16 Kg</string>
    <string name="in_out">Masuk dan Keluar</string>
    <string name="tabung">Tabung</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="list_user">List User</string>
    <string name="scan">Scan</string>
    <string name="i_accept">I Accept</string>

    <string name="term">Terms &amp; Condition</string>
    <string name="term_link"><a href='#'>Terms &amp; Condition</a></string>
    <string name="show_term"><a href='#'>Lihat Terms &amp; Condition kami</a></string>
    <string name="term_condition">
        <![CDATA[
<p>&nbsp;</p>
<ol>
    <li style="text-align: justify;">user diharapkan dapat menerapkan perilaku kejujuran. Penipuan dapat dikenakan sanksi yang berat.</li>
    <li style="text-align: justify;">Setiap 10% dari saldo akan diambil perbulan dari total saldo bulan itu untuk 5% maintenance app 5% untuk bantuan RW. Jika user belum memiliki saldo di akun Aplikasi Desih  makan saldo tidak akan terpotong.</li>
    <li style="text-align: justify;">Pengambilan saldo dapat dilakukan dengan petugas kami (perwakilan coordinator tiap RT) dan ketika saldo berkurang maka tidak dapat di refund kembali</li>
    <li style="text-align: justify;">Konversi berat sampah dilakukan secara otomatis oleh aplikasi maka pastikan memilih jenis sampah yang tepat dan memasukkan berat sampah yang sesuai dengan berat yang telah ditimbang oleh petugas kami (perwakilan coordinator tiap RT).</li>
    <li style="text-align: justify;">Pastikan setiap user menggunakan smartphone pribadi (tidak meminjam akun dari user lain) agar akumulasi jumlah saldo benar.</li>
    <li style="text-align: justify;">Kami akan mengambil langkah yang tepat untuk melindungi privasi Anda. Setiap kali Anda memberikan informasi yang sensitif (misalnya, nomor handphone) kami akan mengambil langkah-langkah yang wajar untuk melindungi privasi tersebut. Kami juga akan mengambil langkah-langkah keamanan yang wajar untuk melindungi informasi pribadi Anda dalam penyimpanan. Nomor handphone hanya digunakan untuk proses verifikasi dan bukan disimpan untuk tujuan pemasaran.</li>
    <li style="text-align: justify;">Situs ini memiliki langkah-langkah keamanan untuk melindungi kehilangan, penyalahgunaan dan perubahan informasi di dalam kendali kita. Langkah-langkah ini meliputi metode perlindungan data dasar dan kompleks, dalam penyimpanan offline tertentu informasi dan securitizing server database kami. Situs ini memberikan pilihan bagi para pengunjung untuk menghapus informasi mereka dari database kami untuk tidak menerima informasi kedepannya atau untuk tidak lagi menerima layanan kami.</li>
</ol>
        ]]>
    </string>
    <string name="about_text">
        Aplikasi Desih adalah sebuah aplikasi bank sampah digital yang berada di desa Denanyar Jombang Jawa timur. Aplikasi ini memudahkan pengguna untuk melakukan transaksi penabungan sampah daur ulang agar menjadi lebih mudah dan efektif.
    </string>
    <string name="contact_1">+62 823-3473-3284 (admin 1)</string>
    <string name="contact_2">+62 896-3430-8819 (admin 2)</string>
    <string name="contact_3">+62 822-1972-5794 (admin 3)</string>

    <string-array name="jenis_kelamin">
        <item>Laki - Laki</item>
        <item>Perempuan</item>

    </string-array>

    <string name="about">Aplikasi Desih adalah sebuah aplikasi bank sampah digital yang berada di desa Denanyar Jombang Jawa timur. Aplikasi ini memudahkan pengguna untuk melakukan transaksi penabungan sampah daur ulang agar menjadi lebih mudah dan efektif. /n
Terms and condition \n
a.	user diharapkan dapat menerapkan perilaku kejujuran. Penipuan dapat dikenakan sanksi yang berat. \n
b.	Setiap 10% dari saldo akan diambil perbulan dari total saldo bulan itu untuk 5% maintenance app 5% untuk bantuan RW .Jika user belum memiliki saldo di akun Aplikasi Desih  makan saldo tidak akan terpotong \n
c.	Pengambilan saldo dapat dilakukan dengan petugas kami (perwakilan coordinator tiap RT) dan ketika saldo berkurang maka tidak dapat di refund kembali. \n
d.	Konversi berat sampah dilakukan secara otomatis oleh aplikasi maka pastikan memilih jenis sampah yang tepat dan memasukkan berat sampah yang sesuai dengan berat yang telah ditimbang oleh petugas kami (perwakilan coordinator tiap RT). \n
e.	Pastikan setiap user menggunakan smartphone pribadi (tidak meminjam akun dari user lain) agar akumulasi jumlah saldo benar. \n
f.	Kami akan mengambil langkah yang tepat untuk melindungi privasi Anda. Setiap kali Anda memberikan informasi yang sensitif (misalnya, nomor handphone) kami akan mengambil langkah-langkah yang wajar untuk melindungi privasi tersebut. Kami juga akan mengambil langkah-langkah keamanan yang wajar untuk melindungi informasi pribadi Anda dalam penyimpanan. Nomor handphone hanya digunakan untuk proses verifikasi dan bukan disimpan untuk tujuan pemasaran. \n
g.	Situs ini memiliki langkah-langkah keamanan untuk melindungi kehilangan, penyalahgunaan dan perubahan informasi di dalam kendali kita. Langkah-langkah ini meliputi metode perlindungan data dasar dan kompleks, dalam penyimpanan offline tertentu informasi dan securitizing server database kami. Situs ini memberikan pilihan bagi para pengunjung untuk menghapus informasi mereka dari database kami untuk tidak menerima informasi kedepannya atau untuk tidak lagi menerima layanan kami. \n
    </string>
    <string name="silahkan">Berikan code barcode di bawah ini ke coordinator untuk melakukan penukaran sampah atau barang</string>
    <string-array name="barang_type">
        <item></item>
        <item>PLASTIK</item>
        <item>KERTAS</item>
        <item>LOGAM</item>
        <item>KACA</item>
        <item>LAIN</item>
    </string-array>
    <string-array name="rt_list">
        <item>-- Pilih RT --</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
</resources>
