<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_admin"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>

    <item
        android:id="@+id/user_list_admin"
        android:icon="@drawable/ic_baseline_list"
        android:title="@string/list_user"/>

    <item
        android:id="@+id/scan_admin"
        android:icon="@drawable/ic_qr_code_scan"
        android:title="@string/scan"/>

    <item
        android:id="@+id/list_sampah"
        android:icon="@drawable/ic_baseline_menu_book"
        android:title="@string/list_sampah"/>

    <item
        android:id="@+id/profile_admin"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profile"/>

</menu>