<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/tabungan"/>

    <item
        android:id="@+id/navigation_in_out"
        android:icon="@drawable/ic_baseline_input"
        android:title="@string/in_out"/>

    <item
        android:id="@+id/navigation_tabung"
        android:icon="@drawable/ic_baseline_beenhere"
        android:title="@string/tabung"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history"
        android:title="@string/history"/>

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/profil"/>

</menu>