<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Tentang Kami"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:justificationMode="inter_word"
            android:text="@string/about_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hubungi kami:"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_1" />

        <TextView
            android:id="@+id/contact_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_2" />

        <TextView
            android:id="@+id/contact_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_3" />

        <TextView
            android:id="@+id/show_term_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/show_term"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>