<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".user.Fragment.TabunganFragment"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hallo"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_nama_nasabah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nasabah"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFont"
                android:textSize="14sp"
                android:text="@string/tampilan_tabungan_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="4dp"
            android:background="@drawable/shadow"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/transparent"
                card_view:cardElevation="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/shadow_card_view"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_uang"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorFont2"/>

                        <TextView
                            android:id="@+id/tv_total_uang"
                            android:layout_width="185dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:text="@string/_75_000"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorFont2"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textAlignment="viewEnd"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:gravity="end" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="4dp"
            android:background="@drawable/shadow"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/transparent"
                card_view:cardElevation="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/shadow_card_view"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/berat_sampah"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_total_sampah"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_21"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorFont2"/>

                        <TextView
                            android:layout_width="185dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:text="@string/kg"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorFont2"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textAlignment="viewEnd"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:gravity="end" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="4dp"
            android:background="@drawable/shadow"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                card_view:cardElevation="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:background="@drawable/shadow_card_view"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/riwayat_transaksi"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="6dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorFont2"/>

                        <TextView
                            android:id="@+id/tv_riwayat_transaksi"
                            android:layout_width="185dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp"
                            android:text="@string/_75_000"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/colorFont2"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/details"
                            android:textAlignment="viewEnd"
                            android:layout_gravity="bottom"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            tools:ignore="RtlCompat" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>