<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:srcCompat="@drawable/background"
    tools:context=".user.Fragment.LaporanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/laporan_tabungan"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/ic_account_circle_black_24dp"
            android:contentDescription="TODO" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_laporan_tabungan"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingBottom="4dp"
                android:background="@drawable/shadow"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@android:color/transparent"
                    card_view:cardElevation="10dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:background="@drawable/shadow_card_view"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:text="@string/total"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>

                            <TextView
                                android:id="@+id/tv_berat_laporan"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:textSize="12sp"
                                android:text="@string/_16_kg"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="6dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rp"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:textColor="@color/colorFont2"/>

                            <TextView
                                android:id="@+id/tv_total_uang"
                                android:layout_width="195dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:text="@string/_75_000"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:textColor="@color/colorFont2"/>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/details"
                                android:textAlignment="viewEnd"
                                android:layout_weight="1"
                                android:textSize="12sp"
                                android:gravity="end" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>